--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,16 @@
 		"src": "studytracker/wsgi.py",
 		"use": "@vercel/python",
 		"config":{ "maxLamdaSize": "15mb", "runtime": "python3.9"}
-	}],
+	},
+	{
+		"src": "build_files.sh",
+		"use": "@vercel/static-build",
+		"config":{
+			"distDir": "staticfiles_build"
+		}
+
+	}
+],
 	"routes": [
 		{
 			"src": "/(.*)",
